# deepCRE_reimplemented

./: .gitignore  2msr_example_input.csv  2msr_example_input_gernot.csv  4msr_example_input.csv  Test cases for mixed annotation files.txt  create_target_file.py  deepCRE_s_msr.o9090  deepCRE_s_msr.o9146  deepCRE_s_msr.o9149  deepCRE_s_msr.o9151  deepCRE_s_msr.o9154  deepCRE_s_msr.o9155  deepcre_crosspredict.py  deepcre_interpret.py  deepcre_interprete.py  deepcre_motifs.py  deepcre_predict.py  example_input.csv  extract_sequences.py  parsing.py  pyproject.toml  readme.md  readme_old.md  sequence_optimization.py  set_up_example.sh  simon_training_set1.csv  simon_training_set11.csv  simon_training_set2.csv  simon_training_set3.csv  test.py  test_cross_predictions.py  train_models.py  train_ssr_models.py  utils.py  validation_genes.pickle
inputs/: example_predict_input.csv  test_prediction.json  test_training_msr.json  test_training_ssr.json
inputs/interpretation/: test_interpretation.json  test_interpretation_chromosomes.json
inputs/motives/: test_motif_extraction.json  test_motif_extraction_chromosomes.json
inputs/prediction/: test_prediction_chromosomes.json  test_prediction_small_genes.json  test_prediction_targets.json
inputs/training/: test_training.json  test_training_chromosomes.json  test_training_defaults.json  test_training_in_ex.json
sequence_optimization/: evolution.py  test_evolution.py
src/deepCRE/: create_target_file.py  create_validation_genes.py  test.py  (+10 more)
test_folder/: check_outputs.py  compare_predictions.py  test.py  test_cross_predictions.py
(+36 files in other folders)
